# Godot-P3Opus-Plugin

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  build.sh  extension.gdextension
demo/: README_P3Decoder.md  console.gd  console.gd.uid  extension.gdextension  extension.gdextension.uid  project.godot  sc_main.tscn  voice.p3
demo/.godot/: global_script_class_cache.cfg
demo/.godot/editor/: editor_layout.cfg  filesystem_cache10  filesystem_update4  project_metadata.cfg
src/: debuger.cpp  debuger.h  opus_encoder.cpp  opus_encoder.h  opus_session_decoder.cpp  opus_session_decoder.h  p3_decoder.cpp  p3_decoder.h  register_types.cpp
